--- a/sample/codepkg/classes/SampleDeployClass.cls
+++ b/sample/codepkg/classes/SampleDeployClass.cls
@@ -18,5 +18,6 @@ public class SampleDeployClass {
     
     public static void helloMethod() {
         System.debug('Hello World');
+        System.debug('testing merge');
     }
 }
