--- a/sample/codepkg/classes/SampleDeployClass.cls
+++ b/sample/codepkg/classes/SampleDeployClass.cls
@@ -17,7 +17,7 @@ public class SampleDeployClass {
     }
     
     public static void helloMethod() {
-        System.debug('Hello World');
+        System.debug('Hello World_test');
         System.debug('testing merge');
     }
 }
