changes in feature1

--- a/sample/codepkg/classes/SampleDeployClass.cls
+++ b/sample/codepkg/classes/SampleDeployClass.cls
@@ -18,6 +18,6 @@ public class SampleDeployClass {
     
     public static void helloMethod() {
         System.debug('Hello World_test');
-        System.debug('testing merge');
+        System.debug('testing merge.....');
     }
 }
