--- a/sample/codepkg/classes/SampleDeployClass.cls
+++ b/sample/codepkg/classes/SampleDeployClass.cls
@@ -19,7 +19,6 @@ public class SampleDeployClass {
     public static void helloMethod() {
 
         System.debug('Hello World_test');
-        System.debug('testing merge changes should be there only in develop branch_......');
+        System.debug('testing merge changes should be there only in develop branch__......');
            }
-        System.debug('testing merge.....');
-}
+        }
