--- a/sample/codepkg/classes/SampleFailingTestClass.cls
+++ b/sample/codepkg/classes/SampleFailingTestClass.cls
@@ -7,5 +7,6 @@ public class SampleFailingTestClass {
 
         Account retAcc = [select id, phone from Account where id=:acc.id][0];
         System.assertEquals('867-5309', retAcc.phone); // Always fails.
+        system.debug('merge');
     }
 }
